environments/gloo-mesh-core/west-region-prod/clusterservices-config/base/https-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: https-gateway
  namespace: istio-gateways
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    #- "istio-gateways/*"
    #- "gloo-mesh/*"
    #- "argocd/*"
    #- "grafana/*"
    #- "web-ui/*"
    #- "openai/*"
    - "*"
    tls:
      mode: SIMPLE
      credentialName: cf-advanced-tls-secret
