environments/gloo-mesh-core/west-region-prod/clusterservices-config/base/jaeger-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-gateways
spec:
  hosts:
  - "jaeger.west.gmc.glooplatform.com"
  gateways:
  - istio-gateways/https-gateway
  http:
  - name: jaeger-ui
    match:
    - uri:
        prefix: /jaeger
    route:
    - destination:
        host: tracing
        port:
          number: 80
